# PromptHub

./: .gitignore  NOTES.md  README.md  index.html  package-lock.json  package.json  prompt-vault-build-prompt.md  tailwind.config.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.tsx  FavoriteFilter.tsx  PromptCard.tsx  PromptForm.tsx  SearchBar.tsx  SortControl.tsx  TagCreatePopover.tsx  TagDropdown.tsx  TagFilter.tsx  ThemeToggle.tsx  Toast.tsx
src/lib/: clipboard.ts  db.ts  env.ts  importExport.ts  search.ts  theme.ts  uuid.ts
src/types/: index.ts
